--- a/templates/puerto.html
+++ b/templates/puerto.html
@@ -36,4 +36,44 @@
         </div>
     </div>
 </section>
+<section class="seccion-accion">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6" id="texto-accion">
+                <p class="text-center">Llámanos será un placer servirte</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 padre-link">
+                <div>
+                    <a href="tel:54040436">Llamar</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="seccion-detalles">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <h2 class="text-center">Detalles de Nuestros Servicios</h2>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <h3>Auxilio en carretera - Servicios viales</h3>
+                <p>Paso de corriente con yomper, suministro de combustible, cerrajería automotriz</p>
+            </div>
+            <div class="Paso de corriente con yomper, suministro de combustible, cerrajería automotrizcol-xs-12 col-sm-12 col-md-12">
+                <h3>Remolque - Recuperación de vehículos</h3>
+                <p>Recuperamos vehículos atascados en arena con grúas especiales, remolque en carretera, en gasolineras</p>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <h3>Transporte pesado</h3>
+                <p>Tenemos equipo especial para transportar vehículos pesados</p>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <h3>Rescate - Maniobras</h3>
+                <p>Rescates de vehículos chocados, volcados, encunetados, en barrancos, nuestras gruas pueden con vehículos
+                    que esten cargados o vacíos</p>
+            </div>
+        </div>
+    </div>
+</section>
 {%endblock%}
