--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-6">
-                        <a href="https://gruascatalan.com"><img src="../res/img/logo.png" alt="logo" class="center-block img-responsive"></a>
+                        <a href="/"><img src="../res/img/logo.png" alt="logo" class="center-block img-responsive"></a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6">
                         <p class="text-center">Llámanos</p>
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <ul class="list-inline text-center">
-                           <li><a href="https://gruascatalan.com" class="text-center">Página principal</a></li> 
+                           <li><a href="/" class="text-center">Página principal</a></li> 
                         </ul>
                     </div>
                 </div>
@@ -40,8 +40,10 @@
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <ul class="list-inline text-center">
                             <li><a href="/avisolegal">Aviso Legal</a></li>
-                            <li><a href="/preguntasfrecuentes">Preguntas Frecuentes</a></li>
                         </ul>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <p class="text-center">© Grúas Catalán 2017 - Servicio de grúas en Escuintla / Todos los derechos reservados</p>
                     </div>
                 </div>
             </div>
